--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore IDE folders.
 .idea
 .DS_Store
+
+# Ignore coverage folder.
+/coverage
+
